--- a/OpenAi_Auth.ipynb
+++ b/OpenAi_Auth.ipynb
@@ -79,13 +79,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3be7c3ef",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['OPENAI_API_KEY'] = 'YOUR_OPENAI_SECRET'\n",
+    "os.environ['OPENAI_API_KEY'] = 'YOUR_API_SECRET'\n",
     "os.getenv('OPEN_API_KEY')"
    ]
   },
@@ -99,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ChatCompletion(id='chatcmpl-D87m8aEw9qvqMyOoV5h89Btta1iOJ', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='As equações de campo de Einstein são o conjunto de equações diferenciais que relacionam a geometria do espaço-tempo com o conteúdo de energia e momento do universo. Em termos formais, na forma sem cosmological constant:\\n\\nG_{μν} = (8πG / c^4) T_{μν},\\n\\nonde\\n- G_{μν} = R_{μν} − (1/2) g_{μν} R é o tensor de Einstein, que depende da métrica g_{μν} e de suas derivadas (R_{μν} é o tensor de Ricci, R é o escalar de curvatura);\\n- T_{μν} é o tensor energia-momento, que descreve densidade de energia, momento, pressão e stress do conteúdo de matéria/energia;\\n- G é a constante gravitacional, c é a velocidade da luz.\\n\\nSe incluir a constante cosmológica Λ, as equações ficam:\\n\\nG_{μν} + Λ g_{μν} = (8πG / c^4) T_{μν}.\\n\\nNotas rápidas:\\n- O lado esquerdo (G_{μν}) descreve a geometria/curvatura do espaço-tempo; o lado direito (T_{μν}) descreve o conteúdo de energia e matéria.\\n- Existem 10 equações independentes para as componentes de g_{μν}, refletindo que o espaço-tempo tem 10 graus de liberdade (4 coordenadas, com redundâncias devido às simetrias).\\n- Em vácuo (T_{μν} = 0) surgem soluções como Schwarzschild (corpos esféricos não rotacionados) e Kerr (corpos em rotação).\\n- Em fraco campo e velocidades pequenas, as equações reduzem ao limite Newtoniano: G_{00} ≈ 2Φ/c^2, levando à equação de Poisson ∇^2 Φ = 4πGρ, onde Φ é o potencial gravitacional.\\n\\nSe quiser, posso entrar em mais detalhes sobre alguma parte específica (por exemplo, a forma explícita de G_{μν}, o significado físico do T_{μν}, ou um exemplo de solução como Schwarzschild).', refusal=None, role='assistant', annotations=[], audio=None, function_call=None, tool_calls=None))], created=1770828884, model='gpt-5-nano-2025-08-07', object='chat.completion', service_tier='default', system_fingerprint=None, usage=CompletionUsage(completion_tokens=1622, prompt_tokens=29, total_tokens=1651, completion_tokens_details=CompletionTokensDetails(accepted_prediction_tokens=0, audio_tokens=0, reasoning_tokens=1152, rejected_prediction_tokens=0), prompt_tokens_details=PromptTokensDetails(audio_tokens=0, cached_tokens=0)))\n"
+      "ChatCompletion(id='chatcmpl-D89SOUNnh3hakqUYo65At6XwLlHbt', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='A equação de campo de Einstein é a formulação matemática fundamental da teoria da relatividade geral, proposta por Albert Einstein em 1915. Essa equação descreve como a matéria e a energia produzem curvatura no espaço-tempo, que por sua vez influencia o movimento dos corpos celestes. A equação de campo de Einstein é composta por tensores que representam a geometria do espaço-tempo e a distribuição de matéria e energia. Ela é fundamental para compreender a gravitação e fenômenos astrofísicos como buracos negros, ondas gravitacionais e a expansão do universo.', refusal=None, role='assistant', annotations=[], audio=None, function_call=None, tool_calls=None))], created=1770835348, model='gpt-3.5-turbo-0125', object='chat.completion', service_tier='default', system_fingerprint=None, usage=CompletionUsage(completion_tokens=148, prompt_tokens=31, total_tokens=179, completion_tokens_details=CompletionTokensDetails(accepted_prediction_tokens=0, audio_tokens=0, reasoning_tokens=0, rejected_prediction_tokens=0), prompt_tokens_details=PromptTokensDetails(audio_tokens=0, cached_tokens=0)))\n"
      ]
     }
    ],
@@ -110,7 +110,7 @@
     "#     print(model)\n",
     "\n",
     "response = client.chat.completions.create(\n",
-    "    model='gpt-5-nano', \n",
+    "    model='gpt-3.5-turbo', \n",
     "    messages=[\n",
     "        {'role':'system','content':'Você é um assistente prestativo.'},\n",
     "        {'role':'user','content':'O que é a equação de campo de Einstein?'}\n",
@@ -120,371 +120,11 @@
     "#roles => system -> user -> assistant\n",
     "print(response)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "6ef6b729-5ea3-4198-930f-564f5e5dad5a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "As equações de campo de Einstein são o conjunto de equações diferenciais que relacionam a geometria do espaço-tempo com o conteúdo de energia e momento do universo. Em termos formais, na forma sem cosmological constant:\n",
-      "\n",
-      "G_{μν} = (8πG / c^4) T_{μν},\n",
-      "\n",
-      "onde\n",
-      "- G_{μν} = R_{μν} − (1/2) g_{μν} R é o tensor de Einstein, que depende da métrica g_{μν} e de suas derivadas (R_{μν} é o tensor de Ricci, R é o escalar de curvatura);\n",
-      "- T_{μν} é o tensor energia-momento, que descreve densidade de energia, momento, pressão e stress do conteúdo de matéria/energia;\n",
-      "- G é a constante gravitacional, c é a velocidade da luz.\n",
-      "\n",
-      "Se incluir a constante cosmológica Λ, as equações ficam:\n",
-      "\n",
-      "G_{μν} + Λ g_{μν} = (8πG / c^4) T_{μν}.\n",
-      "\n",
-      "Notas rápidas:\n",
-      "- O lado esquerdo (G_{μν}) descreve a geometria/curvatura do espaço-tempo; o lado direito (T_{μν}) descreve o conteúdo de energia e matéria.\n",
-      "- Existem 10 equações independentes para as componentes de g_{μν}, refletindo que o espaço-tempo tem 10 graus de liberdade (4 coordenadas, com redundâncias devido às simetrias).\n",
-      "- Em vácuo (T_{μν} = 0) surgem soluções como Schwarzschild (corpos esféricos não rotacionados) e Kerr (corpos em rotação).\n",
-      "- Em fraco campo e velocidades pequenas, as equações reduzem ao limite Newtoniano: G_{00} ≈ 2Φ/c^2, levando à equação de Poisson ∇^2 Φ = 4πGρ, onde Φ é o potencial gravitacional.\n",
-      "\n",
-      "Se quiser, posso entrar em mais detalhes sobre alguma parte específica (por exemplo, a forma explícita de G_{μν}, o significado físico do T_{μν}, ou um exemplo de solução como Schwarzschild).\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(response.choices[0].message.content)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f72f01da-4727-4bca-ab8b-24bce8d20f98",
-   "metadata": {},
-   "source": [
-    "## The System Role"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "ecbf01d4-2fb3-46de-b74c-e8e293ef5e12",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nós vamos explicar Programação Orientada a Objetos com Python, precioso. Aqui vai um guia simples, com os conceitos principais e exemplos prontos, para você entender e começar a praticar.\n",
-      "\n",
-      "O que é Programação Orientada a Objetos (POO)\n",
-      "- Classe: molde ou molde de objeto. Define atributos (estado) e métodos (comportamento).\n",
-      "- Objeto: uma instância da classe, algo que existe na prática.\n",
-      "- Atributos: dados que o objeto guarda (informações).\n",
-      "- Métodos: funções que o objeto pode executar (comportamentos).\n",
-      "- Encapsulamento: esconder detalhes internos e expor apenas o que importa.\n",
-      "- Herança: uma classe herda atributos e métodos de outra.\n",
-      "- Polimorfismo: a mesma interface pode ter comportamentos diferentes em classes diferentes.\n",
-      "- Abstração: mostrar apenas o essencial, escondendo complexidades.\n",
-      "\n",
-      "Exemplos simples em Python\n",
-      "\n",
-      "1) Classe básica, objeto e método\n",
-      "- O que faz: cria uma pessoa e apresenta.\n",
-      "\n",
-      "- Código:\n",
-      "class Pessoa:\n",
-      "    def __init__(self, nome, idade):\n",
-      "        self.nome = nome\n",
-      "        self.idade = idade\n",
-      "\n",
-      "    def apresentar(self):\n",
-      "        print(f\"Olá! Meu nome é {self.nome} e tenho {self.idade} anos.\")\n",
-      "\n",
-      "# Criando um objeto\n",
-      "p = Pessoa(\"Ana\", 30)\n",
-      "p.apresentar()\n",
-      "\n",
-      "2) Herança e polimorfismo\n",
-      "- O que faz: uma classe filha estende a mãe e define seu próprio comportamento.\n",
-      "\n",
-      "- Código:\n",
-      "class Animal:\n",
-      "    def __init__(self, nome):\n",
-      "        self.nome = nome\n",
-      "\n",
-      "    def falar(self):\n",
-      "        raise NotImplementedError(\"Subclasses devem implementar falar\")\n",
-      "\n",
-      "class Cachorro(Animal):\n",
-      "    def falar(self):\n",
-      "        return f\"{self.nome} late: au au\"\n",
-      "\n",
-      "class Gato(Animal):\n",
-      "    def falar(self):\n",
-      "        return f\"{self.nome} miauu\"\n",
-      "\n",
-      "# Usando as classes\n",
-      "cachorro = Cachorro(\"Rex\")\n",
-      "gato = Gato(\"Mia\")\n",
-      "print(cachorro.falar())\n",
-      "print(gato.falar())\n",
-      "\n",
-      "# Polimorfismo: tratamos diferentes objetos pela mesma interface\n",
-      "def fazer_falar(animais):\n",
-      "    for a in animais:\n",
-      "        print(a.falar())\n",
-      "\n",
-      "animais = [Cachorro(\"Lobo\"), Gato(\"Luna\")]\n",
-      "fazer_falar(animais)\n",
-      "\n",
-      "3) Encapsulamento e propriedades\n",
-      "- O que faz: controla o acesso a dados internos.\n",
-      "\n",
-      "- Código:\n",
-      "class ContaBancaria:\n",
-      "    def __init__(self, saldo_inicial=0):\n",
-      "        self._saldo = saldo_inicial  # convenção de atributo privado\n",
-      "\n",
-      "    @property\n",
-      "    def saldo(self):\n",
-      "        return self._saldo\n",
-      "\n",
-      "    @saldo.setter\n",
-      "    def saldo(self, valor):\n",
-      "        if valor < 0:\n",
-      "            raise ValueError(\"Saldo não pode ser negativo\")\n",
-      "        self._saldo = valor\n",
-      "\n",
-      "# Uso\n",
-      "conta = ContaBancaria(100)\n",
-      "print(conta.saldo)  # 100\n",
-      "conta.saldo = 150\n",
-      "print(conta.saldo)  # 150\n",
-      "# conta.saldo = -10  # faria erro se descomentado\n",
-      "\n",
-      "4) Composição (alternativa à herança)\n",
-      "- Em vez de herdar, você pode compor objetos menores dentro de um objeto maior.\n",
-      "\n",
-      "- Código:\n",
-      "class Carro:\n",
-      "    def __init__(self, modelo, motor):\n",
-      "        self.modelo = modelo\n",
-      "        self.motor = motor  # composição: o carro tem um motor\n",
-      "\n",
-      "class Motor:\n",
-      "    def ligar(self):\n",
-      "        return \"Motor ligado!\"\n",
-      "\n",
-      "motor = Motor()\n",
-      "carro = Carro(\"Fiat Uno\", motor)\n",
-      "print(carro.motor.ligar())\n",
-      "\n",
-      "Boas práticas úteis\n",
-      "- Use herança quando há um relacionamento \"é um\" (ex.: Cachorro é um Animal).\n",
-      "- Use composição quando há um relacionamento \"tem um\" (ex.: Carro tem um Motor).\n",
-      "- Siga o princípio de duck typing: se parece com um pato, provavelmente é um pato. Em Python, o tipo não importa tanto quanto os métodos que ele oferece.\n",
-      "- Encapsule dados sensíveis com atributos privados (precedidos por underscore) e exponha via @property quando necessário.\n",
-      "- Mergulhe em métodos mágicos (como __init__, __str__) conforme precisar para tornar suas classes mais úteis, legíveis e fáceis de debugar.\n",
-      "\n",
-      "Resumo rápido\n",
-      "- Classes são moldes; objetos são instâncias.\n",
-      "- Atributos são estados; métodos são comportamentos.\n",
-      "- Encapsulamento, herança, polimorfismo e abstração são pilares da POO.\n",
-      "- Python facilita com sintaxe clara, ganchos de propriedade e suporte a herança/composição.\n",
-      "\n",
-      "Se quiseres, eu te dou mais exemplos práticos voltados ao teu projeto, preciosidade. Queres explorar um caso específico (por exemplo, uma aplicação simples de cadastro, jogo, ou API) usando POO em Python?\n"
-     ]
-    }
-   ],
-   "source": [
-    "from openai import OpenAI\n",
-    "client = OpenAI()\n",
-    "\n",
-    "# system_role_content = 'You explain concepts in depth using simple terms, and you dive examples to help peaople learn. At the end of wach explanation you ask a question to check for undestanding.' \n",
-    "# system_role_content = 'You are a consise assistant. You reply briefly with no elaboration'\n",
-    "system_role_content = 'You reply in the style of Gollum character from Lord of the Rings'\n",
-    "\n",
-    "response = client.chat.completions.create(\n",
-    "    model = 'gpt-5-nano',\n",
-    "    messages = [\n",
-    "        {'role':'system','content':system_role_content},\n",
-    "        {'role':'user','content': 'Explique Programação Orientada a Objetos com Python.'}\n",
-    "    ],\n",
-    "    temperature = 1,\n",
-    "    seed = 1234\n",
-    ")\n",
-    "\n",
-    "print(response.choices[0].message.content)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b8e94271-e4e4-48fd-834a-0445b2d8a460",
-   "metadata": {},
-   "source": [
-    "## Chat Completion API Parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "8b4475e7-ec18-4757-b077-14b7b6871b31",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"J.R.R. Tolkien's epic fantasy masterpiece, 'The Lord of the Rings', transports readers to a rich and detailed world filled with unforgettable characters, thrilling adventures, and profound themes of friendship, sacrifice, and the struggle between good and evil.\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "from openai import OpenAI\n",
-    "client = OpenAI()\n",
-    "\n",
-    "response = client.chat.completions.create(\n",
-    "    model = 'gpt-3.5-turbo',\n",
-    "    messages = [\n",
-    "        { 'role': 'system', 'content': 'You are a helpful assistant.' },\n",
-    "        { 'role': 'user', 'content': 'Write an sentece review of Lord of the Rings by JRR Tolkien.'}\n",
-    "    ],\n",
-    "    temperature = 1,\n",
-    "    # seed = 1234,\n",
-    "    # top_p = 0.1,\n",
-    "    # max_tokens = 10,\n",
-    "    # n = 2,\n",
-    "    # stop = [';', '.','\\n'],\n",
-    "    # frequency_penalty = -1, #between -2 and 2 \n",
-    "    # presence_penalty = 0, # [-1, +2]\n",
-    ")\n",
-    "\n",
-    "print ( response.choices[0].message.content )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2cda2052-45b0-45a7-abab-2be3e9ae7e70",
-   "metadata": {},
-   "source": [
-    "## AI That Thinks: Diving into OpenAI's Reasoning Models (o1 and o3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "8a58c9ac-805c-4eb3-aae5-cd4638dde625",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Here is a portable Bash script that counts messages per log level from a log file with lines like:\n",
-      "YYYY=MM-DD HH:MM:SS - LEVEL - Message\n",
-      "\n",
-      "- It reads from a file given as an argument, or from stdin if no file is provided.\n",
-      "- It extracts the level by splitting on the \" - \" delimiter and tallies the second field.\n",
-      "\n",
-      "Script (save as log_count.sh):\n",
-      "\n",
-      "#!/usr/bin/env bash\n",
-      "set -euo pipefail\n",
-      "\n",
-      "usage=\"Usage: $0 [logfile]\"\n",
-      "\n",
-      "# Support reading from stdin if no file is provided, or if \"-\" is given\n",
-      "logfile=\"/dev/stdin\"\n",
-      "if [ \"${1:-}\" != \"\" ]; then\n",
-      "  if [ \"$1\" = \"-\" ]; then\n",
-      "    logfile=\"/dev/stdin\"\n",
-      "  else\n",
-      "    logfile=\"$1\"\n",
-      "  fi\n",
-      "fi\n",
-      "\n",
-      "if [ $# -gt 1 ]; then\n",
-      "  echo \"$usage\" >&2\n",
-      "  exit 1\n",
-      "fi\n",
-      "\n",
-      "# Count levels: split each line on \" - \" and take the second field as the level\n",
-      "# Then print level and count, sorted by count desc\n",
-      "awk '{ split($0, f, / - /); if (length(f) >= 3) count[f[2]]++ } END { for (lvl in count) print lvl, count[lvl] }' \"$logfile\" | sort -k2 -nr\n",
-      "\n",
-      "Usage examples:\n",
-      "- ./log_count.sh logfile.txt\n",
-      "- cat logfile.txt | ./log_count.sh\n",
-      "- cat logfile.txt | ./log_count.sh -\n"
-     ]
-    }
-   ],
-   "source": [
-    "from openai import OpenAI\n",
-    "client = OpenAI()\n",
-    "\n",
-    "prompt = \"\"\"\n",
-    "Write a Bash script that reads a log file where each line is in the format \n",
-    "'YYYY=MM-DD HH:MM:SS - LEVEL - Message', and prints out the count of messages for each log level (e.g., INFO, ERROR, DEGUB).\n",
-    "\"\"\"\n",
-    "\n",
-    "response = client.chat.completions.create(\n",
-    "    model = 'gpt-5-nano',\n",
-    "    reasoning_effort = 'medium',\n",
-    "    messages = [\n",
-    "        { 'role': 'user', 'content': prompt }\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "print ( response.choices[0].message.content )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "97c75790-430d-44e2-a893-4eda0386ea0b",
-   "metadata": {},
-   "source": [
-    "## Best Practices for Prompting Reasoning Models\n",
-    "\n",
-    "### 1. Use Developer Messages Instead of System Messages\n",
-    "    Example:\n",
-    "    {'role': 'developer', 'content': 'You are an experienced Bash developer and provide the complete Bash script as your solution'.}\n",
-    "\n",
-    "### 2. Keep Prompts Simple and Direct \n",
-    "    Example:\n",
-    "    good_prompt = 'Sumarize this research paper in one paragraph.'\n",
-    "    bad_prompt = 'Think step by step and sumarize this research paper while considering the key findings, methods, and implications.'\n",
-    "\n",
-    "### 3. Avoid Chain-of-Thought Prompts\n",
-    "\n",
-    "### 4. Use Delimiters for Clarity\n",
-    "\n",
-    "### 5. Start with Zero-Shot, Then Use Few-Shot If Needed\n",
-    "    Example:\n",
-    "\n",
-    "    [ INPUT ]: 'Describe an AI breakthrough in under 50 words.'\n",
-    "    [ EXAMPLE ]: 'Gft-4o optimezed efficiency and reduced latency, improving teal-time interactions.'\n",
-    "\n",
-    "\n",
-    "### 6. Provide Specific Guidelines\n",
-    "\n",
-    "### 7. Be Clear About Your End Goal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b87c8c2b-07d5-4fac-a707-e811179db89e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
