update gpt model

--- a/project_01/project_zero_shot_sentiment_analysis_v1.ipynb
+++ b/project_01/project_zero_shot_sentiment_analysis_v1.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "65d28d1c",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
     "    After classifying the text, respond with the emotion ONLY.'''\n",
     "    \n",
     "    response = client.chat.completions.create(\n",
-    "        model='gpt-3.5-turbo',\n",
+    "        model='gpt-5-nano',\n",
     "        messages=[\n",
     "            {'role': 'system', 'content': system_prompt},\n",
     "            {'role': 'user', 'content': prompt}\n",
