--- a/project_02/project_chatgpt_clone_chatbot_v1.ipynb
+++ b/project_02/project_chatgpt_clone_chatbot_v1.ipynb
@@ -18,18 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ddd6e5f8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install openai -q"
    ]
@@ -48,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "fffcf3df",
    "metadata": {},
    "outputs": [],
@@ -64,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "e6198295",
    "metadata": {
     "scrolled": true
@@ -74,15 +66,85 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Some healthy foods to eat every day include fruits, vegetables, whole grains, lean proteins, nuts, seeds, and legumes.\n",
+      "There isn’t a one-size-fits-all list, but these nutrient-dense foods are great to include daily:\n",
+      "\n",
+      "- Vegetables: aim for variety (spinach/kale, broccoli, peppers, carrots)\n",
+      "- Fruits: berries, citrus, apples (1–2 servings)\n",
+      "- Whole grains: oats, quinoa, brown rice, barley\n",
+      "- Protein: beans/lentils, eggs, fish (fatty fish like salmon 2x/week), chicken, tofu/tempeh\n",
+      "- Nuts and seeds: almonds, walnuts, chia, flax (a small handful)\n",
+      "- Dairy or fortified alternatives: yogurt/kefir, cheese, fortified plant milks\n",
+      "- Healthy fats: olive oil, avocado\n",
+      "- Fermented foods (optional daily): yogurt/kefir, sauerkraut, kimchi\n",
+      "- Hydration: water (limit sugary drinks)\n",
+      "\n",
+      "Quick daily plan (example):\n",
+      "- Breakfast: oats with berries and yogurt\n",
+      "- Lunch: big salad with greens, chickpeas, olive oil + lemon\n",
+      "- Snack: apple with a handful of nuts\n",
+      "- Dinner: grilled salmon or lentil curry with quinoa and vegetables\n",
+      "\n",
+      "Tips:\n",
+      "- Fill half your plate with vegetables, a quarter with lean/protein and/or plant-based protein, a quarter with whole grains.\n",
+      "- Limit added sugars, refined grains, and highly processed foods.\n",
+      "- If you have allergies or medical conditions, adjust accordingly or consult a nutritionist (and vegans may need fortified foods for B12, D, iron, etc.).\n",
       "\n",
       "--------------------------------------------------\n",
       "\n",
-      "Quinoa salad with mixed greens, cherry tomatoes, cucumber, bell peppers, avocado, grilled chicken, and a lemon vinaigrette dressing.\n",
+      "Citrus-Quinoa Salmon Power Bowl\n",
+      "\n",
+      "Servings: 4\n",
+      "Total time: about 40 minutes\n",
+      "\n",
+      "Ingredients\n",
+      "- 1 cup dry quinoa, rinsed\n",
+      "- 2 cups water or broth\n",
+      "- 4 salmon fillets (about 6 oz each) or 2 cups cooked chickpeas (vegan option)\n",
+      "- 2 cups broccoli florets\n",
+      "- 1 large red bell pepper, sliced\n",
+      "- 1 cup cherry tomatoes (optional)\n",
+      "- 3–4 tbsp olive oil, divided\n",
+      "- Salt and pepper to taste\n",
+      "- 1 tsp paprika (or more, to taste)\n",
+      "- 1/2 tsp garlic powder\n",
+      "- 1 lemon (zest and juice)\n",
+      "- 1 avocado, sliced\n",
+      "- 1/4 cup almonds or walnuts, chopped\n",
+      "- 1/2 cup plain yogurt (Greek yogurt works) + 2 tbsp tahini (optional)\n",
+      "- 1 clove garlic, minced\n",
+      "- Fresh parsley or dill, chopped (optional)\n",
+      "- Optional: feta cheese, crumbled\n",
+      "\n",
+      "Dressing (yogurt-tahini)\n",
+      "- 1 cup yogurt\n",
+      "- 2 tbsp tahini (optional)\n",
+      "- 1–2 tbsp lemon juice\n",
+      "- 1 clove garlic, minced\n",
+      "- Salt to taste\n",
+      "- Water to reach pourable consistency\n",
+      "\n",
+      "Instructions\n",
+      "1) Preheat oven to 400°F (200°C). Rinse quinoa; simmer in 2 cups water/broth until fluffy (about 15 minutes). Keep warm.\n",
+      "2) Toss broccoli and bell pepper with 1–2 tbsp olive oil, salt, pepper, paprika, and garlic powder. If using chickpeas, toss them with a pinch of salt and olive oil.\n",
+      "3) Season salmon with salt, pepper, and a little paprika. Place salmon on a lined baking sheet. Roast salmon 12–15 minutes, until done. On a second sheet (or same sheet if space allows), roast veggies 12–15 minutes, until tender.\n",
+      "4) Make dressing: whisk yogurt, tahini (if using), lemon juice, garlic, and a pinch of salt. Thin with a splash of water to desired consistency.\n",
+      "5) Assemble bowls: spoon quinoa as base, top with roasted veggies, salmon (or chickpeas), avocado slices, and nuts. Drizzle with yogurt dressing. Garnish with lemon zest and herbs; sprinkle feta if desired.\n",
+      "\n",
+      "Tips and substitutions\n",
+      "- For vegan: skip salmon; use extra chickpeas or roasted tempeh, and use dairy-free yogurt.\n",
+      "- Add a citrusy finish with extra lemon juice at the table.\n",
+      "- If you’re short on time, cook quinoa in advance and reheat; roast veggies and salmon overlap can reduce total time.\n",
       "\n",
       "--------------------------------------------------\n",
       "\n",
-      "The caloric content of the quinoa salad recipe will vary depending on portion sizes and specific ingredients used.\n"
+      "Rough estimates for 1 serving (the recipe makes 4 servings). Exact values vary by brand and exact amounts you use.\n",
+      "\n",
+      "- With salmon and tahini in dressing: about 800 kcal per serving.\n",
+      "- With salmon but no tahini: about 750 kcal per serving.\n",
+      "- Vegan (chickpeas instead of salmon) with tahini: about 560 kcal per serving.\n",
+      "- Vegan with chickpeas, no tahini: about 520 kcal per serving.\n",
+      "\n",
+      "Bottom line: roughly 520–800 kcal per serving depending on protein and dressing choice. If you share the exact amounts you plan to use, I can recalc precisely.\n"
      ]
     }
    ],
@@ -102,9 +164,9 @@
     "]\n",
     "\n",
     "response = client.chat.completions.create(\n",
-    "    model='gpt-3.5-turbo',\n",
+    "    model='gpt-5-nano',\n",
     "    messages=messages,\n",
-    "    temperature=0.7\n",
+    "    temperature=1\n",
     ")\n",
     "\n",
     "bot_response_1 = response.choices[0].message.content\n",
@@ -122,9 +184,9 @@
     "]\n",
     "\n",
     "response = client.chat.completions.create(\n",
-    "    model='gpt-3.5-turbo',\n",
+    "    model='gpt-5-nano',\n",
     "    messages=messages,\n",
-    "    temperature=0.7\n",
+    "    temperature=1\n",
     ")\n",
     "bot_response_2 = response.choices[0].message.content\n",
     "print(bot_response_2)\n",
@@ -144,9 +206,9 @@
     "]\n",
     "\n",
     "response = client.chat.completions.create(\n",
-    "    model='gpt-3.5-turbo',\n",
+    "    model='gpt-5-nano',\n",
     "    messages=messages,\n",
-    "    temperature=0.7\n",
+    "    temperature=1\n",
     ")\n",
     "bot_response_3 = response.choices[0].message.content\n",
     "print(bot_response_3)\n"
@@ -197,9 +259,9 @@
     "  \n",
     "        \n",
     "    completion = client.chat.completions.create(\n",
-    "        model=\"gpt-3.5-turbo\",\n",
+    "        model=\"gpt-5-nano\",\n",
     "        messages=messages,\n",
-    "        temperature=0.8\n",
+    "        temperature=1\n",
     "#         max_tokens = 3000\n",
     "    )\n",
     "   \n",
@@ -217,14 +279,6 @@
     "# print()\n",
     "# print(messages)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "707f3587",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
