removing all outputs

--- a/OpenAi_Auth.ipynb
+++ b/OpenAi_Auth.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5de0a2d1-0e7f-48b9-91cf-dc19f42cd88d",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e412f211-4148-46b5-bfda-bde1f727ec85",
    "metadata": {},
    "outputs": [],
@@ -42,34 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "75c5d3e8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name: openai\n",
-      "Version: 2.20.0\n",
-      "Summary: The official Python library for the openai API\n",
-      "Home-page: https://github.com/openai/openai-python\n",
-      "Author: \n",
-      "Author-email: OpenAI <support@openai.com>\n",
-      "License: Apache-2.0\n",
-      "Location: C:\\Users\\nardo\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.13_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python313\\site-packages\n",
-      "Requires: anyio, distro, httpx, jiter, pydantic, sniffio, tqdm, typing-extensions\n",
-      "Required-by: \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip show openai"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "40db0e29",
    "metadata": {},
    "outputs": [],
@@ -79,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3be7c3ef",
    "metadata": {},
    "outputs": [],
@@ -91,18 +74,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "40eae649-2739-457e-98a1-7521fa23572d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ChatCompletion(id='chatcmpl-D89SOUNnh3hakqUYo65At6XwLlHbt', choices=[Choice(finish_reason='stop', index=0, logprobs=None, message=ChatCompletionMessage(content='A equação de campo de Einstein é a formulação matemática fundamental da teoria da relatividade geral, proposta por Albert Einstein em 1915. Essa equação descreve como a matéria e a energia produzem curvatura no espaço-tempo, que por sua vez influencia o movimento dos corpos celestes. A equação de campo de Einstein é composta por tensores que representam a geometria do espaço-tempo e a distribuição de matéria e energia. Ela é fundamental para compreender a gravitação e fenômenos astrofísicos como buracos negros, ondas gravitacionais e a expansão do universo.', refusal=None, role='assistant', annotations=[], audio=None, function_call=None, tool_calls=None))], created=1770835348, model='gpt-3.5-turbo-0125', object='chat.completion', service_tier='default', system_fingerprint=None, usage=CompletionUsage(completion_tokens=148, prompt_tokens=31, total_tokens=179, completion_tokens_details=CompletionTokensDetails(accepted_prediction_tokens=0, audio_tokens=0, reasoning_tokens=0, rejected_prediction_tokens=0), prompt_tokens_details=PromptTokensDetails(audio_tokens=0, cached_tokens=0)))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from  openai import OpenAI\n",
     "client = OpenAI()\n",
@@ -124,7 +99,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
